[package]
name = "bendy2d"
version = "0.0.1"
edition = "2021"
description = "A 2D softbody physics engine"
repository = "https://github.com/Murrent/bendy2d"
license = "MIT"
readme = "README.md"
keywords = ["physics", "2d", "softbody", "simulation", "game", "engine", "nalgebra"]
categories = ["physics-engines"]
exclude = [
    ".cargo_vcs_info.json",
    ".gitignore",
    "Cargo.toml.orig",
]

[dependencies]
nalgebra = "0.32.2"